# spotify-client-tui

./: Cargo.toml  README.md  justfile
scripts/: log.sh
src/: lib.rs  main.rs
src/auth/: server.rs
src/components/: component.rs  list.rs  loading.rs  menu.rs  mod.rs  prompt.rs  screen_block.rs
src/components/form/: form.rs  mod.rs  text_input.rs
src/components/spotify/: album_song_list.rs  artist_albums.rs  artist_info.rs  artist_singles.rs  mod.rs  song_info_window.rs  top_songs.rs
src/components/spotify/album/: mod.rs
src/components/tabs/: mod.rs  tab.rs  tabbed_view.rs
src/core/: app.rs  clap.rs  config.rs  logging.rs  mod.rs  spotify.rs
src/core/message/: handler.rs  message.rs  mod.rs
src/core/spotify/: album.rs  artist.rs  client.rs  device.rs  mod.rs  now_playing.rs  player.rs  search_results.rs  song.rs
src/layout/: rect.rs
src/screens/: create_config.rs  devices.rs  error.rs  exit.rs  home.rs  library.rs  mod.rs  now_playing.rs  queue.rs  screen.rs  search.rs  view_album.rs  view_artist.rs
src/screens/auth/: create_config.rs  enter_code.rs  log_in.rs  mod.rs  show_link.rs
src/screens/view/: album.rs  artist.rs
src/utils/: directory.rs  error.rs  mod.rs  string.rs  value.rs  vec.rs
src/widgets/: block.rs  mod.rs  paragraph.rs
