[package]
name = "spotify-client-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = "0.6.3"
dirs = "6.0.0"
log = "0.4.22"
ratatui = "0.29.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
simplelog = "0.12.2"
tokio = { version = "1.43.0", features = ["full"] }
